--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -4,6 +4,11 @@ spring:
 #高可用的时候注释掉
 #server:
 #  port: 8001
+  rabbitmq:
+    host: 192.168.245.131
+    port: 5672
+    username: admin
+    password: admin
   
 eureka:
   client:
