--- a/config/order-service-dev.yml
+++ b/config/order-service-dev.yml
@@ -4,6 +4,11 @@ spring:
     
 #server:
 #  port: 8201
+  rabbitmq:
+    host: 192.168.245.131
+    port: 5672
+    username: admin
+    password: admin
 
   
 eureka:
